--- a/components/atom/pinInput/src/config.scss
+++ b/components/atom/pinInput/src/config.scss
@@ -3,3 +3,5 @@ $bdc-pin-input-field: $c-gray-light-3;
 $lh-pin-input-field: $lh-m;
 $fw-pin-input-field: $fw-regular;
 $bdrs-pin-input-field: $bdrs-base;
+
+$m-pin-input-children: $m-m;
